# Laika

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
examples/: training.ipynb  training_cell_encoder.ipynb
src/laika/: __init__.py  config.py  experiment.py  inference.py  losses.py  model.py  trainer.py  trunk.py  trunk_adapter.py
src/laika/cell_encoders/: README.md  __init__.py  base.py  mlp.py  transformer.py
src/laika/data/: __init__.py  _base_data_module.py  _base_dataset.py  _gtf.py  precompute.py  precomputed_data_module.py  precomputed_dataset.py  sequence_cache.py  sequence_data_module.py  sequence_dataset.py
src/laika/eval/: __init__.py  evaluate.py  metrics.py  visualization.py
src/laika/heads/: README.md  __init__.py  _utils.py  base.py  cross_attention.py  decomposed.py  film.py  hurdle.py  hybrid.py  hyperconv.py  mlp.py
src/laika/utils/: __init__.py  keras_helpers.py  metrics.py
