[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laika"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1",
    "numpy",
    "scipy",
    "anndata",
    "tqdm",
    "loguru",
    "crested",
    "matplotlib"
]

[project.optional-dependencies]
logging = ["wandb"]

[tool.hatch.build.targets.wheel]
packages = ["src/laika"]
